# IBKR-Trading-Bot

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_TEST_REPORT.txt  README.md  SECURITY.md  build_windows.bat  main.py  pyproject.toml  requirements.txt  run_all_tests.bat  run_dev.bat  test_event_driven_cadences.py  test_flowchart_model.py  test_gateway_fault_injection_sequences.py  test_generated_numeric_and_payload_properties.py  test_gui_import_qt_stubs.py  test_ib_platform.py  test_market_data_capture.py  test_model_math.py  test_order_diagnostics.py  test_recovery_and_guard_decision_matrix.py  test_risk_protective_features.py  test_rth_status.py  test_simulated_strategy.py  test_simulation.py  test_storage_schema.py  test_test_infrastructure.py  test_v121_gui_static.py  test_v126_history_flowchart_defaults.py  test_v127_bug_hunt_simulations.py  test_v128_defaults_and_build.py  test_v138_stop_close_market_exit.py  test_v213_gui_space_polish.py  test_v214_gui_lock_timekeeping.py  test_v215_gui_final_polish.py  test_v216_recovery_layout_regression.py  test_v217_gui_maturity.py  test_v218_recovery_audit_layout.py  test_v219_graph_recovery_tables.py  test_v220_gui_rth_stop_layout.py  (+31 more)
Images/: ibkr_bot_source_infographic.html
app/: controller.py  flowchart_model.py  gui.py  ib_adapter.py  ib_platform.py  lockfile.py  market_data_capture.py  models.py  order_diagnostics.py  paths.py  simulation.py  storage.py  strategy.py  timeline_scaling.py
docs/: ARCHITECTURE.md  AUTOMATED_TEST_COVERAGE.md  CODE_REVIEW_NOTES.md  CONFIGURATION_REFERENCE.md  CSV_SIMULATION_SCENARIO_MATRIX.md  DATABASE_SCHEMA.md  LIMITATIONS.md  OFFLINE_BEHAVIOR_TESTS.md  OPERATIONS.md  ORDER_FLOW.md  README.md  RISK_CONTROLS.md  (+11 more)
(+205 files in other folders)
